--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,8 +75,9 @@
         <div class="widget search">
           <div class="widget-content">
               <div id="searchbox">
-                <input type="text" placeholder="請輸入搜尋關鍵字" accesskey="s">
+                <input type="text" placeholder="請輸入搜尋關鍵字" [(ngModel)]="keyword" accesskey="s" #ikeyWord>
                 <input type="button" value="搜尋" id="searchbutton">
+                {{keyword}}{{ikeyWord.value}}
               </div>
           </div>
         </div>
