null operator: "data?.xxx"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-header *ngIf="keyword != 'wifi'"></app-header>
+<!--<app-header *ngIf="keyword != 'wifi'"></app-header>-->
+<app-header *ngIf="data?.keyword != 'wifi'"></app-header>
 
 <!-- CONTAINER START-->
 <section class="container">
