產生servie& 增加 servie 功能

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <div id="ctl00_cphBody_divError"></div>
       <div id="ctl00_cphBody_PostList1_posts" class="posts">
 
-        <app-article [item]="item1" *ngFor="let item1 of data" (delete)="deleteArticle($event)"></app-article>
+        <app-article [item]="item1" *ngFor="let item1 of data"></app-article>
 
       </div>
     </section>
